loop 추가